# ChangeLog for dev-python/benchmarker
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Jun 2010; James Rowe <jnrowe@gmail.com> benchmarker-1.0.0.ebuild:
  Keyworded x86.

  17 Jun 2010; James Rowe <jnrowe@gmail.com> benchmarker-1.0.0.ebuild:
  Keyworded amd64.

  19 May 2010; James Rowe <jnrowe@gmail.com> benchmarker-1.0.0.ebuild:
  Keyworded ~x86.

*benchmarker-1.0.0 (18 May 2010)

  18 May 2010; James Rowe <jnrowe@gmail.com> +benchmarker-1.0.0.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
