@@ -5,8 +5,8 @@ type: :feature
 component: misc-overlay
 release: current
 reporter: James Rowe <jnrowe@gmail.com>
-status: :unstarted
-disposition: 
+status: :closed
+disposition: :fixed
 creation_time: 2010-07-05 17:14:29.591886 Z
 references: []
 
@@ -15,6 +15,14 @@ log_events:
 - - 2010-07-05 17:14:30.135766 Z
   - James Rowe <jnrowe@gmail.com>
   - created
+  - ""
+- - 2010-07-08 16:00:41.443814 Z
+  - James Rowe <jnrowe@gmail.com>
+  - changed status from unstarted to in_progress
+  - ""
+- - 2010-07-08 16:07:18.695755 Z
+  - James Rowe <jnrowe@gmail.com>
+  - closed with disposition fixed
   - ""
 claimer: 
 git_branch: 
