@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST Benchmarker-1.0.0.tar.gz 8357 RMD160 d8d07fc3a71fd005358281280abce54898551e61 SHA1 98ce0085bd43545e717df1fe608c3dbf09b296f1 SHA256 c978fd7b7bb1242f1f1fb05ca5613977e42507dbafabdb9ea36a7e89510a86f6
+DIST Benchmarker-1.1.0.tar.gz 10830 RMD160 d1fbe8819aa10119566b5bf81c88d9169877fba6 SHA1 2a9efa45b94fc43bd8d8b806189bae4e2de8e583 SHA256 d4ef623884d56f2811fbe858c8d599c57c794e7157f23573b3b85302087e3aad
 EBUILD benchmarker-1.0.0.ebuild 890 RMD160 5db32995030472c87ec6cff310514f24daca11d6 SHA1 93fdd5aeeed3bf27f2e3dc0cb7c173113df8d283 SHA256 80b7a7c1395cbf30b531cf7d3f8cbada334166290f59aa050ddbe64bc47ee9c8
-MISC ChangeLog 542 RMD160 b7bdeaf0e82f1f05512d7040820287160cc8cd59 SHA1 ec3c910e78e27829c31cd601c1aa1ea9b23f7265 SHA256 69ffc247cffcc839107253b265dedf7e95706da8555acab68823085b76be5862
+EBUILD benchmarker-1.1.0.ebuild 804 RMD160 693ccf796a4ad26875465f812b3909a7cab05637 SHA1 19893c460d03512ee3cb8ef42c7259032382bde9 SHA256 edf0e6e18570bbd8ed6aee39bfc212dbb0684d1d75c3fdbdd4575ea68353acf2
+MISC ChangeLog 671 RMD160 fd28cf8802856a73a0de3cc22ed18a173e273ad6 SHA1 f90480d153d36948d07074a7ed387e349b2b4887 SHA256 e2c7e0b36409b568913d4084b83dafb199c130b67a607260b06ad60167a32399
 MISC metadata.xml 351 RMD160 1f00316936ff4570cb895a75451f3fc8beda09b9 SHA1 483bf513a8c8036d1d3b2c8fbe813feda38f740b SHA256 121d4ef265082ee83e4799b0c20d0ce3f6ba046cafe82ba1a0447bea7e0d1332
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkwa/6gACgkQzJrj3cAXR0nb2QCgnZgJQZNg6UceLmDZJS98/0kN
-8eMAoLqDZVU6zagOQbCIAdCWvz4qtmFO
-=vWWN
+iEYEARECAAYFAkw195oACgkQzJrj3cAXR0li5wCgjI/Wyky0Vq1BZefcrkLy9Ktp
+opgAn2n9ApsfDBVGheKfaTkMFevsjYgK
+=H+lc
 -----END PGP SIGNATURE-----
