@@ -1,0 +1,22 @@
+>=app-admin/eselect-python-20091230 dev-lang/python
+>=app-admin/eselect-python-20091230 dev-lang/python
+0
+http://pypi.python.org/packages/source/B/Benchmarker/Benchmarker-1.1.0.tar.gz
+
+http://pypi.python.org/pypi/Benchmarker/
+public-domain
+A small utility to benchmark your Python code
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+
+
+
+
+3
+
+compile install postinst postrm prepare test
+
+
+
+
+
