@@ -37,5 +37,7 @@ REM 2010-07-16 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 www-client/cupage-0.5.
 REM 2010-07-16 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 www-client/cupage-0.5.1 %a
 REM 2010-08-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-perl/Net-Twitter-Lite-0.10003 %a
 REM 2010-08-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-perl/Net-Twitter-Lite-0.10003 %a
+REM 2010-08-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/benchmarker-1.1.0 %a
+REM 2010-08-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/benchmarker-1.1.0 %a
 
 # vim: set sw=4 sts=4 et tw=120 fenc=utf-8 ft=remind:
